--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,11 @@
-title: John Doe # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+title: Tim DiPalo # your name (or website title) here
+logo: "/images/IMG_7083 (1).jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Edit these links below   
+  <a href="https://www.linkedin.com/in/tim-dipalo/">LinkedIn</a> 
   <br>
-  in _config.yml 
-  <br><br>
-  <a href="https://www.linkedin.com/in/donbowen-lehigh/">LinkedIn</a> 
+  <a href="/pdf/Resume Finance - DiPalo, Tim (1).pdf" class="btn btn--info">Resume</a>    
   <br>
-  <a href="https://bowen.finance/cv/" class="btn btn--info">Resume</a>  
+  <a href="https://github.com/tdip19">GitHub</a> 
   <br>
-  <a href="https://bowen.finance/" class="btn btn--info">Portfolio</a>  
-  <br>
-  <a href="https://www.GitHub.com/donbowen/">GitHub</a>  
-  <br>
-  <a href="https://www.GitHub.com/donbowen/">Twitter</a>  
-  <br>
-  <a href="https://www.GitHub.com/donbowen/">Youtube</a> 
   
 theme: jekyll-theme-minimal
