--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ logo: "/images/IMG_7083 (1).jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   <a href="https://www.linkedin.com/in/tim-dipalo/">LinkedIn</a> 
   <br>
-  <a href="/pdf/Resume Finance - DiPalo, Tim (1).pdf" class="btn btn--info">Resume</a>    
+  <a href="/pdf/Resume_General_Apr_2023.pdf" class="btn btn--info">Resume</a>    
   <br>
   <a href="https://github.com/tdip19">GitHub</a> 
   <br>
